--- a/contact.html
+++ b/contact.html
@@ -74,6 +74,8 @@
 			position: relative;
 			width: 100px;
 			height: 100px;
+			margin-left: 5px;
+			margin-right: 5px;
 		}
 		
 		</style>
@@ -104,20 +106,20 @@
 			<h1 class="p_header">Contact me</h1>
 			</br>
 			<div id="center">
-				<a href="">
-					<img src="res/email.png" alt="Email" class="pop">
+				<a href="mailto:richard.conley08@gmail.com">
+					<img src="res/email.png" alt="Email" class="grow">
 				</a>
 			
-				<a href="">
-					<img src="res/google.png" alt="Google+" class="pop">
+				<a href="http://www.linkedin.com/in/rconley8">
+					<img src="res/linkedin2.png" alt="Google+" class="grow">
 				</a>
 				
-				<a href="">
-					<img src="res/twitter.png" alt="Twitter" class="pop">
+				<a href="https://twitter.com/_RichardConley">
+					<img src="res/twitter.png" alt="Twitter" class="grow">
 				</a>
 			
-				<a href="">
-					<img src="res/github.png" alt="GitHub" class="pop">
+				<a href="https://github.com/rconley8">
+					<img src="res/github.png" alt="GitHub" class="grow">
 				</a>
 			</div>
 		</div>
