--- a/projects.html
+++ b/projects.html
@@ -117,7 +117,7 @@
 			</br>
 			<p class="blocktext">
 				I am very proud of my most recent project <a href="https://play.google.com/store/apps/details?id=com.rc.ZombieBird&hl=en" id="ref">FlimsyFish</a>.  It is current available for free on the Google Play Store.  
-				<p class="blocktext">To see more of my projects, check out my <a href="">GitHub</a>.
+				<p class="blocktext">To see more of my projects, check out my <a href="https://github.com/rconley8">GitHub</a>.
 				</p>
 			</p>
 	
